--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    overflow: hidden;
 }
 
 .container {
@@ -8,6 +9,7 @@ body {
     height: 100%;
 }
 
+/* sidebar styling */
 .sidebar {
     background-image: url("img/bg.jpg");
     filter:invert();
@@ -43,4 +45,77 @@ body {
     height: 100%;
 }
 
+/* main content styling */
+.main-content {
+    background-image: linear-gradient(rgb(224, 224, 224), rgb(211, 211, 211));
+    font-family: Crimson Text;
+    letter-spacing: 0.5px;
+    font-size: 1.35rem;
+}
 
+.card {
+    background-color: whitesmoke;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 5% 25% 25px 5%;
+    display: grid;
+    grid-template-columns: auto auto;
+    margin-bottom: 5%; 
+}
+
+.pitch-text {
+    padding: 12% 5% 5%;
+    font-weight: 600;
+}
+
+.card div, label {
+    transform:scaleX(1.15);
+    padding-left: 6%;
+    font-size: 0.85rem;
+    color: rgb(58, 58, 58);
+}
+
+.card div {
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.textfield {
+    margin: 0% 15% 9% 0%;
+    border-radius: 6px;
+    border: 1px solid rgb(194, 194, 194);
+    height: 50%;
+    font-size: 0.8em;
+    padding: 0.8% 10px;
+    font-family: Crimson Text;
+}   
+
+.textfield:focus {
+    outline: 1px solid rgb(141, 141, 141);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+input[type="submit"] {
+    padding: 10px 15px;
+    border-radius: 5px;
+    border: 0px solid;
+    margin-left: 5%;
+    font-family: Crimson Text;
+    font-size: 1rem;
+    transform: scaleX(1.15);
+    background-color: rgb(124, 124, 124);
+    color: whitesmoke;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+.form div:last-child {
+    margin: 0.5% 0 0 4%;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 900;
+    color: rgb(90, 90, 90);
+}
