--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
     margin-bottom: 20px;
 }
 
-.textfield {
+.textfield, #password, #confirmpassword {
     margin: 0% 15% 9% 0%;
     border-radius: 6px;
     border: 1px solid rgb(194, 194, 194);
@@ -90,10 +90,16 @@ body {
     font-family: Crimson Text;
 }   
 
-.textfield:focus {
+.textfield:focus, #password:focus, #confirmpassword:focus {
     outline: 1px solid rgb(141, 141, 141);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
+.textfield:focus:invalid {
+    border: 1px solid red;
+}
+.textfield:valid {
+    border: 1px solid green;
 }
 
 input[type="submit"] {
@@ -118,4 +124,12 @@ a {
     text-decoration: none;
     font-weight: 900;
     color: rgb(90, 90, 90);
+}
+
+#password.error, #confirmpassword.error {
+    border: 1px solid red;
+}
+
+#password.valid, #confirmpassword.valid {
+    border: 1px solid green;
 }
